welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:10: error: '(' expected but '{' found.
  } else if {
            ^answerCell:13: error: illegal start of simple expression
}
^